--- a/package.json
+++ b/package.json
@@ -27,65 +27,23 @@
   "author": "HerbalCareHub Team",
   "license": "MIT",
   "dependencies": {
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-badge": "^1.0.4",
-    "@radix-ui/react-button": "^1.0.4",
-    "@radix-ui/react-card": "^1.0.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-collapsible": "^1.0.3",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-hover-card": "^1.0.7",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-menubar": "^1.0.4",
-    "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-progress": "^1.0.3",
-    "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-scroll-area": "^1.0.5",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slider": "^1.1.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-toggle": "^1.0.3",
-    "@radix-ui/react-tooltip": "^1.0.7",
-    "@tanstack/react-query": "^5.8.4",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
     "cross-env": "^10.0.0",
     "drizzle-orm": "^0.29.0",
     "express": "^4.18.2",
-    "lucide-react": "^0.294.0",
     "postcss": "^8.4.31",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.5",
-    "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.6.2",
-    "wouter": "^2.12.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.9.0",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
-    "@vitejs/plugin-react": "^4.1.1",
-    "autoprefixer": "^10.4.16",
     "drizzle-kit": "^0.20.6",
     "eslint": "^8.53.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
     "prettier": "^3.0.3",
-    "typescript": "^5.2.2",
-    "vite": "^4.5.0"
+    "typescript": "^5.2.2"
   },
   "engines": {
     "node": ">=18.0.0",
@@ -93,10 +51,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/herbal-care-hub.git"
+    "url": "https://github.com/jonnieke/herbal.git"
   },
   "bugs": {
-    "url": "https://github.com/yourusername/herbal-care-hub/issues"
+    "url": "https://github.com/jonnieke/herbal/issues"
   },
   "homepage": "https://herbal-care-hub.vercel.app"
 }
