--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -12,8 +12,8 @@
     "noEmit": false,
     "jsx": "react-jsx",
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
     "baseUrl": ".",
     "paths": {
