Simplify Vercel config and make TypeScript less strict for build

--- a/vercel.json
+++ b/vercel.json
@@ -3,17 +3,13 @@
   "builds": [
     {
       "src": "server/index.ts",
-      "use": "@vercel/node",
-      "config": {
-        "installCommand": "npm install"
-      }
+      "use": "@vercel/node"
     },
     {
       "src": "client/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist",
-        "installCommand": "npm install"
+        "distDir": "dist"
       }
     }
   ],
