Fix import errors: Add @/shared/* path alias and resolve TypeScript/Vite configuration issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["client/src/*"]
+      "@/*": ["client/src/*"],
+      "@/shared/*": ["shared/*"]
     }
   },
   "include": ["./**/*"],
