--- a/railway.toml
+++ b/railway.toml
@@ -1,7 +1,9 @@
 [build]
 builder = "nixpacks"
+buildCommand = "npm run build"
 
 [deploy]
+startCommand = "npm start"
 healthcheckPath = "/api/herbs"
 healthcheckTimeout = 300
 restartPolicyType = "on_failure"
