--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
   "license": "MIT",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@types/pg": "^8.15.5",
     "cross-env": "^10.0.0",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
     "express": "^4.18.2",
     "nanoid": "^5.1.5",
+    "pg": "^8.16.3",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "tsx": "^4.6.2",
