--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "nanoid": "^5.1.5",
     "pg": "^8.16.3",
     "postcss": "^8.4.31",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "tailwindcss": "^3.3.5",
     "tsx": "^4.6.2",
     "zod": "^4.1.5"
